[package]
name = "forever_alone"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.93"
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_ecs_ldtk = { version = "0.10", features = [
    "default",
    "derive",
    "atlas",
    "render",
] }
bevy_asset_loader = "0.21"
bevy_kira_audio = "0.20"
bevy_la_mesa = { path="../bevy_la_mesa" }
bevy_lunex = { version = "0.2.4" }
bevy_novel = { path="../bevy_novel"}
bevy_particle_systems = "0.13"
bevy_rapier2d = "0.27.0"
bevy_tweening = "0.11"
bevy-inspector-egui = "0.27.0"
image = "0.25.5"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features=["cuda"] }
pecs = "0.6"
rand = "0.8"
renpy_parser = "0.0.3"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["full"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]